projects/nanousd-labs/nanousd/tests/usda/invalid/uint64_negative.usda
#usda 1.0

def Scope "T"
{
    uint64 negative = -1
}
